# scheduling_api

./: README.md
calepita-server/: Cargo.toml
calepita-server/src/: firestore.rs  main.rs  routes.rs
