[package]
name = "calepita-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1" ,features = ["full"] }
serde = { version = "1" , feature = ["derive"]}
serde_json = "1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1", ffeatures = ["v4"] }
google-cloud-firestore = "0.11.0" #非公式Firestore クライアント(gcloud 認証用)